sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: not found: value echanger
  while(echanger){
        ^AlgCocktailSort1:9: error: not found: value echanger
    echanger=false
    ^AlgCocktailSort1:21: error: not found: value echanger
        echanger=true;
        ^