sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
      var i =0
  var ttrie=0
  
  
  while(echanger){
  
		echanger=false
    
 	  for (i<- 0 to getNombreValeurs-(2) ){
    	
      if(plusPetit(i+1:Int,i:Int):Boolean){
     	 echange(i:Int,i+1:Int)
      for (i<- getNombreValeurs to 0){
        if (plusPetit(i+1:Int,i:Int):Boolean){
          echange(i:Int,i+1:Int)
        }
      } 
        
        echanger=true;
      
      }
      
       
       
      }
     
  
  } 
}